Dont change <html> color Fix for dark mode change on ios, but breaks the page load animation

--- a/style.css
+++ b/style.css
@@ -275,9 +275,6 @@ body.active .sheet.home > * {
 */
 
 @media (prefers-color-scheme: dark) {
-    html {
-        background-color: black;
-    }
     body {
         color: white;
         background-color: black;
